--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,5 +11,8 @@
   "include": [
     "src/**/*.d.ts",
     "src/**/*.ts"
+  ],
+  "exclude": [
+    "src/app/components/generate-canvas-tracks/dynamic-track-generator.component.ts"
   ]
 }
